# aoc_2022

./: .gitignore  CMakeLists.txt  CMakePresets.json  d00.cpp  d01.cpp  d02.cpp  d03.cpp  d04.cpp  d05.cpp  d06.cpp  d07.cpp  d08.cpp  d09.cpp  d10.cpp  d11.cpp  d12.cpp  d13.cpp  d14.cpp  d15.cpp  d16.cpp  d17.cpp  d18.cpp  d19.cpp  d20.cpp  d21.cpp  d22.cpp  d23.cpp  d24.cpp  d25.cpp  days.cpp  days.hpp  main.cpp  utils.hpp
input/: README.txt
